--- a/packages/components/menu/src/menu.scss
+++ b/packages/components/menu/src/menu.scss
@@ -1,5 +1,5 @@
 :host {
-  background: var(--sl-elevation-surface-raised-default-idle);
+  background: var(--sl-elevation-surface-raised-default);
   border: var(--sl-color-border-plain) solid var(--sl-size-borderWidth-subtle);
   border-radius: var(--sl-size-borderRadius-default);
   box-shadow: var(--sl-elevation-shadow-md);
